# astropy

./: .pre-commit-config.yaml  .ruff.toml  CHANGES.rst  pyproject.toml  setup.cfg
astropy/config/: configuration.py  decorators.py
astropy/constants/: constant.py
astropy/convolution/: convolve.py  core.py  kernels.py
astropy/coordinates/: __init__.py  angles.py  attributes.py  baseframe.py  earth.py  field.py  funcs.py  matching.py  matrix_utilities.py  representation.py  sky_coordinate.py  sky_coordinate_parsers.py  solar_system.py  spectral_coordinate.py  spectral_quantity.py  transformations.py
astropy/coordinates/builtin_frames/: altaz.py  baseradec.py  ecliptic.py  galactic.py  icrs_cirs_transforms.py  lsr.py  skyoffset.py  supergalactic.py
astropy/coordinates/representation/: base.py
astropy/coordinates/tests/: test_representation.py  test_representation_arithmetic.py  test_sky_coord_velocities.py
astropy/cosmology/: __init__.py  _connect.py  _core.py  _utils.py  builtin.py  connect.py  core.py  flrw.py  funcs.py  interpolate.py  parameter.py  parameters.py  realizations.py  redshift.py  units.py  utils.py
astropy/cosmology/_flrw/: wpwazpcdm.py
astropy/cosmology/_flrw/tests/: test_base.py  test_init.py  test_lambdacdm.py  test_w.py  test_w0cdm.py  test_w0wacdm.py  test_w0wzcdm.py  test_wpwazpcdm.py
astropy/cosmology/_funcs/tests/: test_comparison.py  test_funcs.py
astropy/cosmology/_io/: cosmology.py  ecsv.py  html.py  mapping.py  model.py  row.py  table.py  utils.py  yaml.py
astropy/cosmology/_io/tests/: test_.py  test_json.py  test_mapping.py  test_row.py  test_yaml.py
astropy/cosmology/_parameter/: __init__.py
astropy/cosmology/_parameter/tests/: test_parameter.py
astropy/cosmology/_src/flrw/: base.py
astropy/cosmology/_src/funcs/: optimize.py
astropy/cosmology/_src/traits/: __init__.py  curvature.py  matter.py
astropy/cosmology/flrw/: base.py  lambdacdm.py  w0cdm.py  w0wacdm.py  w0wzcdm.py  wpwazpcdm.py
astropy/cosmology/flrw/tests/: test_base.py  test_lambdacdm.py  test_w0cdm.py  test_w0wacdm.py  test_w0wzcdm.py  test_wpwazpcdm.py
astropy/cosmology/flrw/tests/data/: data_TestFLRW.yml  data_TestFlatLambdaCDM.yml  data_TestFlatw0waCDM.yml  data_TestFlatwCDM.yml  data_Testw0wzCDM.yml  data_TestwpwaCDM.yml
astropy/cosmology/funcs/: comparison.py
astropy/cosmology/funcs/tests/: test_comparison.py  test_funcs.py
astropy/cosmology/io/: __init__.py  ecsv.py  html.py  latex.py  mapping.py  model.py  ndarray.py  quantity.py  row.py  table.py  utils.py
astropy/cosmology/io/tests/: base.py  test_ecsv.py  test_json.py  test_mapping.py  test_model.py  test_row.py  test_table.py  test_yaml.py
astropy/cosmology/parameter/: __init__.py  _core.py  _descriptors.py
astropy/cosmology/parameter/tests/: test_descriptors.py  test_parameter.py
astropy/cosmology/tests/: __init__.py  conftest.py  helper.py  test_builtin.py  test_connect.py  test_core.py  test_cosmology.py  test_flrw.py  test_funcs.py  test_parameter.py  test_realizations.py  test_redshift.py  test_units.py  test_utils.py
astropy/cosmology/tests/data/: __init__.py  data_TestCosmology.yml  data_Test_aszarr.py
astropy/io/: registry.py
astropy/io/ascii/: core.py  docs.py  ui.py
astropy/io/fits/: column.py  convenience.py  header.py
astropy/io/fits/hdu/: base.py  hdulist.py  image.py  streaming.py  table.py
astropy/io/misc/: hdf5.py  yaml.py
astropy/io/registry/: base.py  core.py
astropy/io/votable/: converters.py  table.py  tree.py  util.py
astropy/modeling/: core.py  fitting.py  mappings.py  models.py  optimizers.py  polynomial.py  rotations.py  statistic.py  tabular.py  utils.py
astropy/modeling/src/: wcsconfig.h
astropy/modeling/tests/: test_models.py
astropy/nddata/: bitmask.py  ccddata.py  compat.py  nddata.py  nduncertainty.py  utils.py
astropy/nddata/mixins/: ndarithmetic.py
astropy/samp/: hub.py
astropy/stats/: circstats.py  funcs.py  histogram.py  jackknife.py  sigma_clipping.py
astropy/table/: column.py  index.py  operations.py  pprint.py  row.py  table.py  table_helpers.py
astropy/time/: core.py
astropy/timeseries/periodograms/bls/: core.py
astropy/timeseries/periodograms/lombscargle/: _statistics.py  core.py  utils.py
astropy/timeseries/periodograms/lombscargle/implementations/: main.py  utils.py
astropy/uncertainty/: core.py  distributions.py
astropy/units/: __init__.py  _typing.py  core.py  decorators.py  equivalencies.py  photometric.py  physical.py  quantity.py  typing.py  unitspec.py  utils.py
astropy/units/function/: core.py  logarithmic.py
astropy/units/quantity/: __init__.py  base.py  core.py  funcs.py  specifictype.py
astropy/units/quantity/facets/: __init__.py
astropy/units/quantity/facets/base/: __init__.py  info.py  quantity.py
astropy/units/quantity/facets/ndarray/: __init__.py  quantity.py  utils.py
astropy/units/quantity_helper/: converters.py
astropy/units/tests/: test_quantity.py  test_quantity_annotations.py  test_quantity_decorator.py  test_quantity_typing.py  test_typing.py
astropy/utils/: decorators.py  metadata.py  misc.py  shapes.py  state.py
astropy/utils/iers/: iers.py
astropy/utils/masked/: core.py
astropy/utils/masked/tests/: test_masked.py
astropy/utils/metadata/: core.py
astropy/utils/tests/: test_metadata.py
astropy/wcs/: docstrings.py  utils.py  wcs.py
docs/: common_links.txt  conf.py  glossary.rst  index.rst
docs/changes/cosmology/: 15168.feature.rst  15484.api.rst  rename.feature.rst
docs/changes/io.fits/: 13753.bugfix.rst
docs/coordinates/: skycoord.rst
docs/cosmology/: dev.rst  index.rst  io.rst  tests.rst
docs/cosmology/mypackage/: setup.cfg  setup.py
docs/cosmology/mypackage/io/: astropy_convert.py  astropy_io.py
docs/io/fits/api/: hdus.rst
docs/nddata/: subclassing.rst
docs/units/: index.rst  quantity.rst  type_hints.rst
docs/whatsnew/: 6.0.rst
