[project]
name = "astropy"
description = "Astronomy and astrophysics core library"
readme = "README.rst"
requires-python ">=3.8"
license = {file = "LICENSE.rst"}
keywords = ["astronomy", "astrophysics", "cosmology", "space", "science","units", "table", "wcs", "samp", "coordinate", "fits", "modeling", "models", "fitting", "ascii"]
authors = [
    {name = "The Astropy Developers"},
    {email = "astropy.team@gmail.com"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy>=1.18"
    "pyerfa>=2.0"
    "PyYAML>=3.13"
    "packaging>=19.0"
]

[project.urls]
homepage = "http://astropy.org"
documentation = "https://docs.astropy.org/en/stable/index.html"
repository = "https://github.com/astropy/astropy"
changelog = "https://docs.astropy.org/en/stable/changelog.html"

[project.optional-dependencies]
test = [
    "pytest-astropy>=0.9",
    "pytest-xdist"
]
test_all = [
    "pytest-astropy>=0.9",
    "pytest-xdist",
    "objgraph",
    "ipython>=4.2",
    "coverage",
    "skyfield>=1.20",
    "sgp4>=2.3",
    "recommended =",
    "scipy>=1.3",
    "matplotlib>=3.1,!=3.4.0"
]
all = [
    "scipy>=1.3",
    "matplotlib>=3.1,!=3.4.0",
    "certifi",
    "dask[array]",
    "h5py",
    "pyarrow>=5.0.0",
    "beautifulsoup4",
    "html5lib",
    "bleach",
    "pandas",
    "sortedcontainers",
    "pytz",
    "jplephem",
    "mpmath",
    "asdf>=2.6",
    "bottleneck",
    "ipython>=4.2",
    "pytest",
    "typing_extensions"
]
docs = [
    "sphinx<4",
    "sphinx-astropy>=1.6",
    "pytest",
    "scipy>=1.3",
    "matplotlib>=3.1,!=3.4.0",
    "sphinx-changelog>=1.1.0"
]

[build-system]
requires = ["setuptools",
            "setuptools_scm>=6.2",
            "wheel",
            "cython==0.29.22",
            "jinja2==2.10.3",
            "oldest-supported-numpy",
            "extension-helpers"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "astropy/_version.py"

[tool.astropy-bot]
    [tool.astropy-bot.autolabel]
        # Comment this out to re-enable but then labeler Action needs to be disabled.
        enabled = false

    [tool.astropy-bot.changelog_checker]
        enabled = false

[tool.towncrier]
    package = "astropy"
    filename = "CHANGES.rst"
    directory = "docs/changes"
    underlines = "=-^"
    template = "docs/changes/template.rst"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "feature"
        name = "New Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "API Changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bug Fixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "other"
        name = "Other Changes and Additions"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""

    [[tool.towncrier.section]]
        name = "astropy.config"
        path = "config"

    [[tool.towncrier.section]]
        name = "astropy.constants"
        path = "constants"

    [[tool.towncrier.section]]
        name = "astropy.convolution"
        path = "convolution"

    [[tool.towncrier.section]]
        name = "astropy.coordinates"
        path = "coordinates"

    [[tool.towncrier.section]]
        name = "astropy.cosmology"
        path = "cosmology"

    [[tool.towncrier.section]]
        name = "astropy.extern"
        path = "extern"

    [[tool.towncrier.section]]
        name = "astropy.io.ascii"
        path = "io.ascii"

    [[tool.towncrier.section]]
        name = "astropy.io.fits"
        path = "io.fits"

    [[tool.towncrier.section]]
        name = "astropy.io.misc"
        path = "io.misc"

    [[tool.towncrier.section]]
        name = "astropy.io.registry"
        path = "io.registry"

    [[tool.towncrier.section]]
        name = "astropy.io.votable"
        path = "io.votable"

    [[tool.towncrier.section]]
        name = "astropy.modeling"
        path = "modeling"

    [[tool.towncrier.section]]
        name = "astropy.nddata"
        path = "nddata"

    [[tool.towncrier.section]]
        name = "astropy.samp"
        path = "samp"

    [[tool.towncrier.section]]
        name = "astropy.stats"
        path = "stats"

    [[tool.towncrier.section]]
        name = "astropy.table"
        path = "table"

    [[tool.towncrier.section]]
        name = "astropy.tests"
        path = "tests"

    [[tool.towncrier.section]]
        name = "astropy.time"
        path = "time"

    [[tool.towncrier.section]]
        name = "astropy.timeseries"
        path = "timeseries"

    [[tool.towncrier.section]]
        name = "astropy.uncertainty"
        path = "uncertainty"

    [[tool.towncrier.section]]
        name = "astropy.units"
        path = "units"

    [[tool.towncrier.section]]
        name = "astropy.utils"
        path = "utils"

    [[tool.towncrier.section]]
        name = "astropy.visualization"
        path = "visualization"

    [[tool.towncrier.section]]
        name = "astropy.wcs"
        path = "wcs"

[tool.gilesbot]
    [tool.gilesbot.circleci_artifacts]
        enabled = false

    [tool.gilesbot.pull_requests]
        enabled = true

    [tool.gilesbot.towncrier_changelog]
        enabled = true
        verify_pr_number = true
        changelog_skip_label = "no-changelog-entry-needed"
        help_url = "https://github.com/astropy/astropy/blob/main/docs/changes/README.rst"
        changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/astropy/astropy/blob/main/docs/changes/README.rst)."
        type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/astropy/astropy/blob/main/docs/changes/README.rst)"
        number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."
