[metadata]
name = astropy_example_cosmology_package
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://astropy.org
description = Example package for showing interoperability with Astropy Cosmology

[options]
# We set packages to find: to automatically find all sub-packages
packages = find:
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    numpy>=1.18

[options.entry_points]
astropy_cosmology_io =
    mypackage = mypackage.io.astropy_convert:mypackage
    myformat = mypackage.io.astropy_io:myformat

[options.extras_require]
all =
    astropy >= 5.0
